# -core

./: .gitignore  Cargo.toml  LICENSE
altv-server/: rustbase.toml
altv-server/resources/gamemode/: resource.toml
src/: lib.rs
src/api/users/: db_model.rs  events.rs  mod.rs  vitality.rs
src/database/: mod.rs
src/modules/: mod.rs
src/modules/database/: mod.rs
src/modules/utils/: config.rs  mod.rs  terminal.rs
src/systems/users/: events.rs  mod.rs
src/utils/: config.rs  mod.rs  terminal.rs
