[package]
name = "resource"
version = "0.1.0"
edition = "2021"

[build]
target-dir = "./altv-server/resources/gamemode/server"

[lib]
crate-type = ['cdylib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altv = "15.1.0"
chrono = "0.4.31"
inline_colorization = "0.1.6"
serde = "1.0.193"
serde_derive = "1.0.193"
toml = "0.8.8"
